# iMaoTai-reserve

./: .gitignore  config.py  main.py  pyproject.toml  send_message.py  start.sh
.github/workflows/: actionActive.txt  autoReserve.yml
myConfig/: credentials
