[project]
name = "iMaoTai-reserve"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Power", email = "powerleecn@foxmail.com"},
]
dependencies = [
    "requests~=2.31.0",
    "pycryptodome==3.17",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
